--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.generate-ddl=true
 
+spring.datasource.url=jdbc:mysql://localhost:3306/tienda
+spring.datasource.username=springUser
+spring.datasource.password=12345
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql: true
