--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tienda
 spring.datasource.username=springUser
