Constants to properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.show-sql: true
 
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
+
+custom.LOCK_DAYS = 1
+custom.COOKIE_LAST_USER = _lastUser
+custom.COOKIE_CONNECTED_USER = _connectedUser
+custom.CONTENT_CONTAINER = content
+custom.FRAGMENT_CONTAINER = fragment
+custom.SESSION_USER = userSession
