Added all behaviour parameterized query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ custom.COOKIE_CONNECTED_USER = _connectedUser
 custom.CONTENT_CONTAINER = content
 custom.FRAGMENT_CONTAINER = fragment
 custom.SESSION_USER = userSession
+
+mysql.maxDate = 9999-12-31
+mysql.minDate = 1000-01-01
+mysql.minDecimal = 0
+mysql.maxDecimal = 999999999999
