--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ custom.COOKIE_CONNECTED_USER = _connectedUser
 custom.CONTENT_CONTAINER = content
 custom.FRAGMENT_CONTAINER = fragment
 custom.SESSION_USER = userSession
+custom.SESSION_USER_AUTHENTICATION = userAuthentication
 
 mysql.maxDate = 9999-12-31
 mysql.minDate = 1000-01-01
