Added counter User-Browser connections and user connections in BBDD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.show-sql: true
 custom.LOCK_DAYS = 1
 custom.COOKIE_LAST_USER = _lastUser
 custom.COOKIE_CONNECTED_USER = _connectedUser
+custom.COOKIE_USERS_CONNECTIONS = _usersConnections
 custom.CONTENT_CONTAINER = content
 custom.FRAGMENT_CONTAINER = fragment
 custom.SESSION_USER = userSession
