--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tienda
+spring.datasource.url=jdbc:mysql://localhost:3306/tienda?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
