Init check admin user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ custom.CONTENT_CONTAINER = content
 custom.FRAGMENT_CONTAINER = fragment
 custom.SESSION_USER = userSession
 custom.SESSION_USER_AUTHENTICATION = userAuthentication
+custom.SESSION_ADMIN_USER = adminSession
 
 mysql.maxDate = 9999-12-31
 mysql.minDate = 1000-01-01
