--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tienda?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -9,8 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 custom.LOCK_DAYS = 1
 custom.COOKIE_LAST_USER = _lastUser
